# DevSpoofGO

./: .gitignore  .gitmodules  README.md  get_lines.ps1  go.mod  go.sum  main.go
cli/: cli.go
config/: config_dll.go
config/generator/: generator.go
debug/: debugging.go
dll/: CMakeLists.txt  SecHex-7DT7AW8.txt  dll_docs.md  spoof_dll.cpp  spoof_dll.exp  spoof_dll.lib  wmi_handler.cpp  wmi_handler.h
dll/info/: disk_info.cpp  disk_info.h  hardware_info.cpp  hardware_info.h  os_info.cpp
dll/info/disk/: disk_serial.cpp  disk_serial.h  vol_info.cpp
dll/info/hardware/: bios_serial.cpp  hardware_info.cpp  hardware_info.h  machine_guid.cpp  machine_guid.h  motherboard_serial.cpp  motherboard_serial.h  processor_id.cpp  processor_id.h  system_uuid.cpp  system_uuid.h
dll/info/network/: wlan_info.cpp  wlan_info.h
dll/info/reg/: certificates_info.cpp  certificates_info.h  current_version.cpp  current_version.h  machine_guid.cpp  machine_guid.h  reg_info.cpp  reg_info.h
dll/native/disk/: disk_serial.cpp  disk_serial.h  vol_info.cpp  vol_info.h
dll/native/hardware/: bios_serial.cpp  bios_serial.h  hardware_info.cpp  hardware_info.h  motherboard_serial.cpp  motherboard_serial.h  processor_id.cpp  processor_id.h  system_uuid.cpp  system_uuid.h
dll/native/network/: wlan_info.cpp  wlan_info.h
dll/native/os/: os_info.cpp  os_info.h
dll/native/reg/: certificates_info.cpp  certificates_info.h  current_version.cpp  current_version.h  machine_guid.cpp  machine_guid.h  reg_info.cpp  reg_info.h
dll/reg/: certificates_info.cpp  certificates_info.h  current_version.cpp  machine_guid.cpp  machine_guid.h  reg_info.cpp
dll/wmi/: bios_serial_wmi.cpp  bios_serial_wmi.h  wmi_bios_serial.cpp  wmi_classes.cpp  wmi_classes.h  wmi_handler.cpp  wmi_handler.h  wmi_physical_memory.cpp  wmi_physical_memory.h  wmi_processor.cpp  wmi_processor.h  wmi_utils.cpp  wmi_utils.h
info/: info.go
info/disk/: disk_info.go
info/hardware/: hardware_info.go
info/network/: network_info.go
info/os/: os_info.go
injector/: injector.go
logger/: logger.go
system/: system_info.go
